set_source_groups()

set(pt_operation_SRCS
Composition.cpp
Composition.hpp
CompositionTableSync.cpp
CompositionTableSync.hpp
CompositionUpdateAction.cpp
CompositionUpdateAction.hpp
CompositionVehicleAddAction.cpp
CompositionVehicleAddAction.hpp
CompositionVehicleRemoveAction.cpp
CompositionVehicleRemoveAction.hpp
Depot.cpp
Depot.hpp
DepotsAdmin.cpp
DepotsAdmin.hpp
DepotTableSync.cpp
DepotTableSync.hpp
DepotUpdateAction.cpp
DepotUpdateAction.hpp
GetCompositionsService.cpp
GetCompositionsService.hpp
GetVehiclesService.cpp
GetVehiclesService.hpp
PTOperationModule.cpp
PTOperationModule.gen.cpp
PTOperationModule.hpp
PTOperationModule.inc.cpp
PTOperationStatisticsAdmin.cpp
PTOperationStatisticsAdmin.hpp
PTOperationStatisticsTableSync.cpp
PTOperationStatisticsTableSync.hpp
Vehicle.cpp
Vehicle.hpp
VehicleAdmin.cpp
VehicleAdmin.hpp
VehiclePosition.cpp
VehiclePosition.hpp
VehiclePositionTableSync.cpp
VehiclePositionTableSync.hpp
VehiclePositionUpdateAction.cpp
VehiclePositionUpdateAction.hpp
VehiclesAdmin.cpp
VehiclesAdmin.hpp
VehicleTableSync.cpp
VehicleTableSync.hpp
VehicleUpdateAction.cpp
VehicleUpdateAction.hpp
)

set_source_files_properties(PTOperationModule.gen.cpp PTOperationModule.inc.cpp PROPERTIES HEADER_FILE_ONLY 1)

add_library(37_pt_operation ${pt_operation_SRCS})

target_link_libraries(37_pt_operation
  35_pt
)

install(TARGETS 37_pt_operation DESTINATION lib)
