set_source_groups()

set(pt_operation_SRCS
Composition.cpp
Composition.hpp
CompositionTableSync.cpp
CompositionTableSync.hpp
CompositionUpdateAction.cpp
CompositionUpdateAction.hpp
CompositionVehicleAddAction.cpp
CompositionVehicleAddAction.hpp
CompositionVehicleRemoveAction.cpp
CompositionVehicleRemoveAction.hpp
DeadRun.cpp
DeadRun.hpp
DeadRunEdge.cpp
DeadRunEdge.hpp
DeadRunTableSync.cpp
DeadRunTableSync.hpp
Depot.cpp
Depot.hpp
DepotAdmin.cpp
DepotAdmin.hpp
DepotsAdmin.cpp
DepotsAdmin.hpp
DepotTableSync.cpp
DepotTableSync.hpp
DepotUpdateAction.cpp
DepotUpdateAction.hpp
DriverActivitiesAdmin.cpp
DriverActivitiesAdmin.hpp
DriverActivity.cpp
DriverActivity.hpp
DriverActivityAdmin.cpp
DriverActivityAdmin.hpp
DriverActivityTableSync.cpp
DriverActivityTableSync.hpp
DriverAllocation.cpp
DriverAllocation.hpp
DriverAllocationTemplate.cpp
DriverAllocationTemplate.hpp
DriverAllocationsListService.cpp
DriverAllocationsListService.hpp
DriverAllocationTableSync.cpp
DriverAllocationTableSync.hpp
DriverAllocationTemplatesListService.cpp
DriverAllocationTemplatesListService.hpp
DriverAllocationTemplateTableSync.cpp
DriverAllocationTemplateTableSync.hpp
DriverService.cpp
DriverService.hpp
DriverServiceAdmin.cpp
DriverServiceAdmin.hpp
DriverServicesAdmin.cpp
DriverServicesAdmin.hpp
DriverServicesListService.cpp
DriverServicesListService.hpp
DriverServiceTableSync.cpp
DriverServiceTableSync.hpp
DriverServiceUpdateAction.cpp
DriverServiceUpdateAction.hpp
GetCompositionsService.cpp
GetCompositionsService.hpp
GetVehiclesService.cpp
GetVehiclesService.hpp
HeuresOperationFileFormat.cpp
HeuresOperationFileFormat.hpp
PTOperationFileFormat.cpp
PTOperationFileFormat.hpp
PTOperationModule.cpp
PTOperationModule.gen.cpp
PTOperationModuleRegister.cpp
PTOperationModule.hpp
PTOperationModule.inc.cpp
PTOperationStatisticsAdmin.cpp
PTOperationStatisticsAdmin.hpp
PTOperationStatisticsTableSync.cpp
PTOperationStatisticsTableSync.hpp
RealTimeVehicleUpdateAction.cpp
RealTimeVehicleUpdateAction.hpp
ServiceComposition.cpp
ServiceComposition.hpp
Vehicle.cpp
Vehicle.hpp
VehicleAdmin.cpp
VehicleAdmin.hpp
VehiclePosition.cpp
VehiclePosition.hpp
VehiclePositionTableSync.cpp
VehiclePositionTableSync.hpp
VehiclePositionUpdateAction.cpp
VehiclePositionUpdateAction.hpp
VehiclesAdmin.cpp
VehiclesAdmin.hpp
VehicleService.cpp
VehicleService.hpp
VehicleServiceAdmin.cpp
VehicleServiceAdmin.hpp
VehicleServiceComposition.cpp
VehicleServiceComposition.hpp
VehicleServiceTableSync.cpp
VehicleServiceTableSync.hpp
VehicleServiceUpdateAction.cpp
VehicleServiceUpdateAction.hpp
VehicleServicesAdmin.cpp
VehicleServicesAdmin.hpp
VehicleServicesListService.cpp
VehicleServicesListService.hpp
VehicleTableSync.cpp
VehicleTableSync.hpp
VehicleUpdateAction.cpp
VehicleUpdateAction.hpp
)

set_source_files_properties(PTOperationModule.gen.cpp PTOperationModule.inc.cpp PROPERTIES HEADER_FILE_ONLY 1)

add_library(37_pt_operation ${pt_operation_SRCS})

target_link_libraries(37_pt_operation
  35_pt
)

install(TARGETS 37_pt_operation DESTINATION lib)
